# workspace

./: .gitignore  AGENTS.md  pyproject.toml  pyrightconfig.json
docs/: structure.md
docs/datasets/: aut.md  common_voice.md  qwen_tts_speech.md  (+1 more)
jobs/: README.md  env.sh  filter_wmt19_tts.sh  filter_wmt19_tts_speech.sh  filter_wmt19_tts_speech_translation.sh  filter_wmt19_tts_translation.sh  prepare_wmt19_tts.sh  prepare_wmt19_tts_chunks_500k.sh  prepare_wmt19_tts_dac.sh  prepare_wmt19_tts_longcat.sh  prepare_wmt19_tts_longcat_bpe.sh  prepare_wmt19_tts_stable.sh  prepare_wmt19_tts_unicodec.sh
scripts/: _filter_wmt19_tts_speech.py  _filter_wmt19_tts_speech_translation.py  _filter_wmt19_tts_translation.py  _prepare_wmt19_tts_codec.py  _prepare_wmt19_tts_longcat.py  _qwen_tts_speech.py  _wmt19_tts_codec.py  _wmt19_tts_store.py  filter_wmt19_tts.py  filter_wmt19_tts_speech.py  filter_wmt19_tts_speech_translation.py  filter_wmt19_tts_translation.py  migrate_store_audio_duration.py  prepare_qwen_tts_speaker_grid.py  prepare_wmt19_tts.py  prepare_wmt19_tts_bpe.py  prepare_wmt19_tts_codec.py  prepare_wmt19_tts_codec_view.py  prepare_wmt19_tts_dac.py  prepare_wmt19_tts_longcat.py  prepare_wmt19_tts_longcat_bpe.py  prepare_wmt19_tts_stable.py  prepare_wmt19_tts_unicodec.py
tests/: conftest.py  test_aut.py  test_common_voice.py  test_env.py  test_longcat_tokenizers.py  test_migrate_store_audio_duration.py  test_prepare_wmt19_tts_longcat_bpe.py  test_qwen_tts_speaker_grid_script.py  test_qwen_tts_speech.py  test_wmt19_tts.py  test_wmt19_tts_scripts.py  test_wmt19_tts_stable.py
(+45 files in other folders)
